--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "cd frontend && npm install && npm run build",
     "install-backend": "cd backend && npm install",
     "install-frontend": "cd frontend && npm install",
-    "postinstall": "npm run install-backend && npm run install-frontend && npm run build"
+    "init-db": "node backend/src/utils/initDatabase.js",
+    "postinstall": "npm run install-backend && npm run install-frontend && npm run build && npm run init-db"
   },
   "engines": {
     "node": ">=18.0.0"
